# OOHD

./: CMakeLists.txt  readme.md
.github/workflows/: Test.yml  c-cpp.yml  cicd.yml  cmake-multi-platform.yml  main.yml  test.yml
include/: DatabaseObject.hpp  OOHD.hpp  Query.hpp
src/: DatabaseObject.cpp  OOHD.cpp  Query.cpp  main.cpp
